[2.93.2] Geometry nodes: wrongly detected "Node group has unidentified nodes or sockets" error #89851

Closed
opened 2021-07-14 10:23:43 +02:00 by Ilja Razinkov · 8 comments

System Information
Operating system: MacOs BigSur
Graphics card: Radeon

Blender Version
Broken: version: 2.93.2 Release Candidate, branch: master, commit date: 2021-06-30 07:45, hash: d3f7ed08e7, type: release
Worked: 2.93.1

Short description of error
Geometry Nodes not working due cryptic "Node group has unidentified nodes or sockets" message

Exact steps for others to reproduce the error
Create any object. Add geometry nodes modifier to it.
Any usual nodes gives "Node group has unidentified nodes or sockets" warning and nothing works //

Screenshot 2021-07-14 at 11.22.47.png

untitled.blend

**System Information** Operating system: MacOs BigSur Graphics card: Radeon **Blender Version** Broken: version: 2.93.2 Release Candidate, branch: master, commit date: 2021-06-30 07:45, hash: d3f7ed08e78b, type: release Worked: 2.93.1 **Short description of error** Geometry Nodes not working due cryptic "Node group has unidentified nodes or sockets" message **Exact steps for others to reproduce the error** Create any object. Add geometry nodes modifier to it. Any usual nodes gives "Node group has unidentified nodes or sockets" warning and nothing works // ![Screenshot 2021-07-14 at 11.22.47.png](https://archive.blender.org/developer/F10223804/Screenshot_2021-07-14_at_11.22.47.png) [untitled.blend](https://archive.blender.org/developer/F10223801/untitled.blend)
Author

Added subscriber: @IPv6

Added subscriber: @IPv6
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser self-assigned this 2021-07-14 11:10:55 +02:00

This issue was referenced by 3e6ea470ee

This issue was referenced by 3e6ea470ee73159c2b82895396496a79448dfddc

This issue was referenced by 5583d51773

This issue was referenced by 5583d517730f4c7ad487c099df0394700a246675
Member

Will set to High prio (since this makes 2.93 geometry nodes unusable)

Will set to High prio (since this makes 2.93 geometry nodes unusable)
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89851
No description provided.